k8s/05-ingress.yaml
# ==============================================================================
# ☸️ KUBERNETES MANIFEST - 05: INGRESS ROUTER & SECURE REVERSE PROXY
# ==============================================================================
# Routage du trafic externe via Ingress Controller (NGINX Ingress / Cert-Manager)
# ==============================================================================

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplis-ingress
  namespace: simpl-is
  annotations:
    # Ingress Class
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Passer à true en production avec Cert-Manager / SSL
    
    # 🔒 Sécurité & Protection contre le Déni de Service (DoS)
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    
    # 🔒 En-têtes de sécurité HTTP ajoutés au Proxy Reverse
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "Referrer-Policy: strict-origin-when-cross-origin";
      more_set_headers "Content-Security-Policy: default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;";

spec:
  rules:
    - host: simpl-is.dgi.gov.ma
      http:
        paths:
          # Routage de l'API Backend RESTful
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080

          # Routage de l'Application Frontend Angular
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    # Fallback / Route locale sans nom de domaine spécifié
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
